Fix auth & add metrics